--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,17 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#ffffff" />
-<meta name="description" content="RajuBadanakanti MyTodos - Web Developer Projects" />
+<meta name="description" content="RajuBadanakanti myTodos - Web Developer Projects" />
+<meta property="og:image" content="%PUBLIC_URL%/preview_image-todo.png" />
+
+
 
 <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png" />
 <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
 <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+
 <!--  APPLICATION TITLE   -->
 <title>myTodos</title>
 </head>
